--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,9 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@movies-data-access/*": ["libs/movies-data-access/src/lib/*"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
