--- a/package.json
+++ b/package.json
@@ -17,8 +17,13 @@
     "@angular/platform-browser-dynamic": "~18.0.0",
     "@angular/router": "~18.0.0",
     "@ionic/angular": "^8.2.5",
+    "@ngrx/effects": "^18.0.1",
+    "@ngrx/router-store": "^18.0.1",
+    "@ngrx/signals": "^18.0.0-rc.2",
     "@ngrx/store": "^18.0.1",
+    "@ngrx/store-devtools": "^18.0.1",
     "@nx/angular": "19.4.3",
+    "ngxtension": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zod": "^3.23.8",
