--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,6 +17,7 @@
     "paths": {
       "@movies-data-access/*": ["libs/movies-data-access/src/lib/*"],
       "@this-film-finder/feature-auth/*": ["libs/feature-auth/src/lib/*"],
+      "@this-film-finder/feature-login/*": ["libs/feature-login/src/lib/*"]
     }
   },
   "exclude": ["node_modules", "tmp"]
