film finder with filters in queryparams working

--- a/apps/this-film-finder/project.json
+++ b/apps/this-film-finder/project.json
@@ -18,6 +18,7 @@
         "inlineStyleLanguage": "scss",
         "assets": [
           "apps/this-film-finder/src/app/favicon.ico",
+          "apps/this-film-finder/src/assets",
           {
             "glob": "**/*",
             "input": "apps/this-film-finder/public"
