--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,7 +20,10 @@
       "@this-film-finder/feature-film-list/*": [
         "libs/feature-film-list/src/lib/*"
       ],
-      "@this-film-finder/feature-login/*": ["libs/feature-login/src/lib/*"]
+      "@this-film-finder/feature-login/*": ["libs/feature-login/src/lib/*"],
+      "@this-film-finder/feature-pagination/*": [
+        "libs/feature-pagination/src/lib/*"
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
