define crypto and storage services

--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@ngrx/store": "^18.0.1",
     "@ngrx/store-devtools": "^18.0.1",
     "@nx/angular": "19.4.3",
+    "asmcrypto.js": "^2.3.2",
     "ngxtension": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "webcrypto-liner": "^1.4.3",
     "zod": "^3.23.8",
     "zone.js": "~0.14.3"
   },
