--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "webcrypto-liner": "^1.4.3",
-    "zod": "^3.23.8",
-    "zone.js": "~0.14.3"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~18.0.0",
