add inlineCritical false for warning correction

--- a/apps/this-film-finder/project.json
+++ b/apps/this-film-finder/project.json
@@ -53,6 +53,11 @@
             }
           ],
           "outputHashing": "all",
+          "optimization": {
+            "styles": {
+              "inlineCritical": false
+            }
+          },
           "namedChunks": true
         },
         "development": {
