--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/forms": "~18.0.0",
     "@angular/platform-browser": "~18.0.0",
     "@angular/platform-browser-dynamic": "~18.0.0",
+    "@angular/platform-server": "~18.0.0",
     "@angular/router": "~18.0.0",
     "@ionic/angular": "^8.2.5",
     "@ngrx/effects": "^18.0.1",
@@ -24,6 +25,7 @@
     "@ngrx/store-devtools": "^18.0.1",
     "@nx/angular": "19.4.3",
     "asmcrypto.js": "^2.3.2",
+    "mock-local-storage": "^1.1.24",
     "ngxtension": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -51,7 +53,7 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^29.4.0",
-    "@types/node": "18.16.9",
+    "@types/node": "^18.18.0",
     "@typescript-eslint/eslint-plugin": "^7.3.0",
     "@typescript-eslint/parser": "^7.3.0",
     "@typescript-eslint/utils": "^8.0.0-alpha.28",
